Updating bookmarks--dcc.dordt.edu to u.dordt.edu.  Alsu updating HoW Sound, a bit on mics 	new file:   HOW_S/MICS/IMG_7597_JesusLovesMeDistorted.png 	modified:   HOW_S/MICS/mic_types.html 	modified:   bookmarks.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -1937,26 +1937,52 @@ hear a hissing sound.  Some of this hiss is from the microphone itself.  (Some m
 console you are using.)  If the sound you are attempting to pick up with the microphone is not 
 loud enough, it cannot overcome the self-noise of the microphone.  Then, when the sound is soft you 
 will hear the hiss of the self-noise in the background.  As you can imagine, the need to pick 
-up such soft sounds is rarely a problem in a house-of-worship situation.  If you do think you are 
-having a problem with a microphone's self-noise, be sure the gain trim on that channel and perhaps 
-on other channels and group mixes too.  Gain structure errors can also produce hiss.  <br><br>  
+up such soft sounds is rarely a problem in a house-of-worship situation.  If you hear hiss or think you are 
+having a problem with a microphone's self-noise, check the gain trim on that channel and perhaps 
+on other channels and group mixes too.  Gain structure errors can produce hiss that sounds just 
+like microphone self-noise.  <br><br>  
 
 Because self-noise is usually not an issue with a dynamic microphone, most specification sheets for 
 dynamic microphones don't mention anything about it.  Better condenser microphones will include self-noise
 on their specification sheets.  For house-of-worship applications anything below about 25 dB-A is good 
 enough.  (Or anything below about 37 dB-CCIT.)<br><br>
 
-The DPA Microphone company has a good summary video: "<a href =
-"https://www.youtube.com/watch?v=-lBOeQCUilw">Understanding dynamic range and the sound pressure level 
-of the voice</a>."  Their video puts emphasis on the maximum SPL issue.  Lewitt company also has a good 
-video on this topic, this time with the emphasis on the self-noise issue.  "<a href=
-"https://www.youtube.com/watch?v=WjnE3DRR5PM">Learn WHY Microphone Self-Noise matters</a>."<br><br><br>
+<b><i>Hum</i></b><br>
+Technically, hum is not self-noise.  But this seems to be an appropriate place to discuss it.  If you 
+are having trouble with hum, the first thing to check is the microphone cable.  A broken wire in the 
+cable can reduce the cable's ability to shield the signal from hum.  But aside from a defect like that, 
+dynamic microphones are inherently slightly suceptible to is hum pickup from 
+nearby magnetic fields such as flourescent light balasts, motors, and sometimes just the wiring in the 
+walls.  Most dynamic microphones are designed assuming the microphone is used in a place free of stray 
+magnetic fields (other than the Earth's natural magnetic field, which is not a problem anyway).  
+Higher-quality dynamic microphones include a <i>hum bucking coil</i> to almost completely eliminate 
+the slight suceptibility to stray magnetic fields.  If a humbucking coil is present the microphone 
+can be expected to have very little or no audible hum in its output in practically every circumstance. <br><br> 
 
-<img src="Audio_Distortion.png"><i><b>Distortion</b></i><br>
+Humbucking coils are also known as <i>compensating</i> coils&mdash;same thing.  Condenser microphones 
+never include humbucking coils because they are insensitive to magnetic fields in the first place.  
+If a microphone includes a humbucking coil you can expect it to be mentioned in the user's manual 
+or on the specifications sheet.  If it does not include a humbucking coil usually there is no 
+mention made of this omission.  The popular Shure SM-58 and the AKG D5 are microphones that are 
+susceptible to magnetic fields.  The Electrovoice RE-20 and the Shure SM-7 are examples of 
+microphones with hum-bucking coils.  <br><br>
+
+In summary, the microphone you choose needs to have enough dynmaic range to accomodate the sound 
+source.  This means the maximum SPL specification of the mic must be greater than the maximum loudness 
+of the sound or you will hear clipping distortion.  The self-noise of the microphone must be many decibels (30dB or more) below the minimum 
+loudness of the sound or you will hear hiss.  A dynamic microphones without humbucking coil might have a slight hum in the 
+background of the sound, meaning it should not be used for soft or delicate sounds.  The DPA 
+Microphone company has a good summary video: "<a href ="https://www.youtube.com/watch?v=-lBOeQCUilw"
+>Understanding dynamic range and the sound pressure level of the voice</a>."  Their video puts 
+emphasis on the maximum SPL issue.  Lewitt company also has a good video on this topic, this time 
+with the emphasis on the self-noise issue.  "<a href="https://www.youtube.com/watch?v=WjnE3DRR5PM"
+>Learn WHY Microphone Self-Noise matters</a>."<br><br><br>
+
+<img src="IMG_7597_JesusLovesMeDistorted.png" height="40" width="150"><i> <b>Distortion</b></i><br>
 <ul>
    <li>One measure of audio fidelity is <i>total harmonic distortion</i> or <i>THD</i> <br>&nbsp; &nbsp; &nbsp;
-          (lower is better, less than 1% is excellent) 
-   <li>[Something more to go here eventually]
+          (lower is better, less than 1% is good&mdash;the distortion will be inaudible.) 
+   <li>Another measure of audio fidelity is intermodulation distortion.  
 </ul><p>
 
 [Something more to go here eventually]
