Updated my CV  Changes to be committed: 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -667,6 +667,18 @@
     </TD>
 
     <TD WIDTH="520" COLSPAN="2"><DIV>
+        <P>D.F. De Boer, "Theoretical Frameworks and Christian Engineering" 
+        <a href=
+        "https://drive.google.com/file/d/1ebf62JSL2chfPVBJA3MvwZeeJDYn6gce/view">
+		<I>Proceedings of the 2022 Christian Engineering Conference</I></a>, 
+        St. Paul Minnesota, June 2022-July 1, pp 192 &ndash; 205.</a></P>
+
+        <P>D.F. De Boer, "Advertising Engineering: Why Choose XYZXY University?" 
+        <a href=
+        "https://drive.google.com/file/d/1ebf62JSL2chfPVBJA3MvwZeeJDYn6gce/view">
+		<I>Proceedings of the 2022 Christian Engineering Conference</I></a>, 
+        St. Paul Minnesota, June 2022-July 1, pp 248 &ndash; 261.</a></P>
+
         <P>D.F. De Boer, "God's Grace in Weights and Measures" 
         <a href=
         "https://drive.google.com/file/d/1pIXDMo7HD3g34FlSWsw9WDUXRi5TSOcE/view?usp=drive_web"
@@ -820,7 +832,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 1/19/2022)</small></DIV>
+         <small>(This page last updated on 8/11/2022)</small></DIV>
     </TD>
 </TR>
 
