Updated Naomi's link to CIVA--now points to Internet Archive 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -598,8 +598,11 @@
         "https://www.facebook.com/friendsflowerfarm" target=
         "_blank">sells flowers on the weekends</a> at the Ames 
         farmer's market.  Naomi is also a member of <a href=
+        "https://web.archive.org/web/20201026212001/http:/civa-artists.ning.com/profile/NaomiFriend"
+        target="_blank">Christians in the Visual Arts</a>
+        <!--<a href=
         "http://civa-artists.ning.com/profile/NaomiFriend"
-        target="_blank">Christians in the Visual Arts</a>.  
+        target="_blank">Christians in the Visual Arts</a>-->.  
 		Kim went from Dordt University to the South Dakota School 
 		of Mines and Technology in Rapid City, South Dakota.  There
 		she earned a master's degree in environmental engineering.  
@@ -832,7 +835,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 8/11/2022)</small></DIV>
+         <small>(This page last updated on 10/1/2022)</small></DIV>
     </TD>
 </TR>
 
