Updated orgainization names: Calvin Univ., SD DANR 	modified:   CV.HTM

--- a/CV.HTM
+++ b/CV.HTM
@@ -91,7 +91,7 @@
 
         B.S. in Letters and Engineering <BR>
         Combined curriculum program with U. of Michigan (above) 1977<BR>
-        Calvin College, Grand Rapids Michigan <BR><BR>
+        Calvin University, Grand Rapids Michigan <BR><BR>
         
         Electronic Technician Certificate, 1972 <BR>
         Radio Electronic Television Schools, Wyoming Michigan <BR><BR></DIV>
@@ -569,7 +569,7 @@
 		<a href="http://westernchristianhs.com/" target="_blank"> 
 		Western Christian High School</a> in Hull, Iowa.  Lori and 
 		Lisa continued their studies 
-		in Nursing at Calvin College in Grand Rapids Michigan. 
+		in Nursing at Calvin University in Grand Rapids Michigan. 
 		Lori is a school nurse for a public school in Michigan.  
 		Lisa is a nurse at a hospital in Grand Rapids.  
 		Marge's son, Keith attended Western Iowa Technical 
@@ -606,9 +606,12 @@
 		Kim went from Dordt University to the South Dakota School 
 		of Mines and Technology in Rapid City, South Dakota.  There
 		she earned a master's degree in environmental engineering.  
-		She now works for the South Dakota Department of Natural
-		Resources and lives in Pierre, South Dakota.  There is one
-		grandchild on Doug's side of the family.  
+		She now works for the South Dakota Department of Agriculture 
+		& Natural Resources in their <a 
+		href="https://danr.sd.gov/OfficeOfWater/WaterRights/default.aspx" 
+		target="_blank">Water Rights Division</a>.  She 
+		lives in Pierre, South Dakota.  There is one grandchild on 
+		Doug's side of the family.  
 		
 		<p>At the end of August 2021, I officially retired from the 
 		faculty at Dordt University.  They made a 
@@ -808,7 +811,7 @@
 </TR>
 <TR>
     <TD WIDTH="570" COLSPAN="3">
-        <BR><H1>A Note about "Dordt University."</H1>
+        <BR><H1>A Note about "Dordt University" and "Calvin University"</H1>
     </TD>
 </TR>
 
@@ -824,7 +827,15 @@
 		For this reason, all references to this institution in this document 
 		are in the form of "Dordt University."  However, the reader should 
 		understand that prior to May 13, 2019 the institution was known as 
-		"Dordt College."  		
+		"Dordt College."<br><br>
+
+		n July 10, 2019 "Calvin College" changed its name to "Calvin University"  
+		The name change was only symbolic.  There was no change in ownership, 
+		governance, administration, or status of accreditation when this happened.
+		For this reason, all references to this institution in this document 
+		are in the form of "Calvin University."  However, the reader should 
+		understand that prior to July 10, 2019 the institution was known as 
+		"Calvin College."
 		</P><BR></DIV>
     </TD>
 </TR>
