--- a/Texts.htm
+++ b/Texts.htm
@@ -36,7 +36,7 @@
    <p align="center"><a href="index.html"
             >Professor De Boer's</a> Textbook Requisitions</b></p>
                                                        <p align="center">
-          (Last updated on Friday, October 23, 2020)</p><p>
+          (Last updated on Monday, November 14, 2022)</p><p>
    
    The links below will show you which textbooks Professor De Boer has 
    ordered for each of his courses.  (For ISBNs and full details, click 
@@ -51,18 +51,29 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Spring 2021 course</b></u>
+   <br><u><b>Spring 2021 courses</b></u>
    </td></tr></table>
    
    
    <table align="center" width="520" border="0" cellpadding="0">
  
- <!--EGR 322--> 
-   <tr><td colspan="2"><a href="S21/323/323S21_Textbook_Requisitions.htm">
-       EGR 323, Electronics II (with lab)</a></td></tr>
+ <!--EGR 363--> 
+   <tr><td colspan="2"><a href="S23/304/304S23_Textbook_Requisitions.htm">
+       EGR 304, Embedded Microcontroller Systems</a></td></tr>
    <tr><td width="180">
-       <a href="S21/323/323S21_Textbook_Requisitions.htm">
-       <img src="S21/323/Sedra_Smith_8th_Cover.png" style="border-style: none"/>
+       <a href="S23/304/304S23_Textbook_Requisitions.htm">
+       <img src="S23/304/Lee_Seshia_2e_thumbnail_120x160.png" style="border-style: none"/>
+       <br><br></td>
+       <td valign="top">
+	   &nbsp;
+   </td></tr>
+   
+ <!--EGR 363--> 
+   <tr><td colspan="2"><a href="S23/363/363S23_Textbook_Requisitions.htm">
+       EGR 363, Introduction to Communication Systems</a></td></tr>
+   <tr><td width="180">
+       <a href="S23/363/363S23_Textbook_Requisitions.htm">
+       <img src="S23/363/Proakis_Salehi_Cover_116x163_tumbnail.jpg" style="border-style: none"/>
        <br><br></td>
        <td valign="top">
 	   &nbsp;
@@ -78,6 +89,19 @@
 <table align="center" width="520" border=0 cellpadding=0><tr><td><small>
    <b>Past Courses Instructed by Professor De Boer</b><br><br>
    
+   
+   <br><u><b>Fall 2022 course</b></u><br>
+   (None)<br>
+
+   <br><u><b>Spring 2022 course</b></u><br>
+   (None)<br>
+   
+   <br><u><b>Fall 2021 courses</b></u><br>
+   (None)<br>
+   
+   <br><u><b>Spring 2021 course</b></u><br>
+   <a href="S21/323/323S21_Textbook_Requisitions.htm">
+      EGR 323, Electronics II (with lab)</a><br>
    
    <br><u><b>Fall 2020 courses</b></u><br>
    <a href="F20/322/322F20_Textbook_Requisitions.htm">
