--- a/integrity.htm
+++ b/integrity.htm
@@ -18,7 +18,7 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 <P Align="center"><B>
                    STANDARDS of SCHOLARSHIP</b><br>
             For Professor De Boer's Classes</b><br>
- <small><font color="grey">(Last updated on 8/21/2020)</font></small></p><p>
+ <small><font color="grey">(Last updated on 11/03/2022)</font></small></p><p>
  
  ". . .whatever you do, whether in word or deed, do it all in 
 the name of the Lord Jesus..." (from Colossians 3)</p><p> 
@@ -48,8 +48,9 @@ like, "explain" or "contrast," etc. in a question.  When those
 words occur you will need to write a sentence or two to answer
 the question. </p><p>
 
-In general, the professor is not interested in the answer. He 
-already knows the answer!  You must write something to show 
+In general, your professors are not interested in the answer. 
+They already know the answers!  Your professors are interested 
+in you and your learning.  You must write something to show 
 that <i>you</i> know how to solve the problem.  
 </p><p> 
 
@@ -68,7 +69,36 @@ that <i>you</i> know how to solve the problem.
    &mdash;Engineering paper is recommended but not required.
                                          <br><br>&nbsp;&nbsp;&nbsp;   
    <i>For reports and papers</i>          <br> &nbsp;&nbsp;&nbsp;
-   &mdash;Use plain white letter size paper (8.5" x 11")
+   &mdash;Use plain white letter size paper (8.5" x 11")<br><br>
+   
+   <i>For homework turned in electronically</i><br>
+   &mdash;Turn in one PDF file or other acceptable file format 
+          per homework <br> &nbsp;&nbsp;&nbsp;
+		  assignment.  The one file should contain all your solutions.<br>
+   &mdash;You may scan homework that is done conventionally with 
+          pencil <br> &nbsp;&nbsp;&nbsp;
+		  and paper and submit a PDF file or other 
+		  acceptable file.<br><br>
+   
+   Alternatively, you may do your homework entirely on a computer. 
+   (A smartphone's screen is too small for you to be sufficiently 
+   productive.)  Microsoft Word, Libre Office, and Pages are 
+   three examples of word processors that have enough features 
+   to be useful.  At the end, export a PDF file or other 
+   acceptable file format.  It is especially useful to become 
+   proficient with the equation editor that your word processor
+   includes.  You might like to supplement your word processor 
+   with a more complete drawing editor and a photo editor of your 
+   choice, and then cut-and-paste screenshots from those programs
+   into your word processor document.<br><br>
+   
+   For writing homework solutions Professor De Boer uses whatever 
+   is convenient for the problem.  Sometimes that paper and pencil 
+   scanned to PDF.  Sometimes he uses MS-Word and pastes results 
+   from other programs such as Gimp, Octave, PSpice, X-circuit, etc. 
+   into the file.  Professor De Boer once was a fan of MathCAD.  
+   It is still an option but he finds MS-Word plus pasting from 
+   other programs is even more convenient.  
 
                                                       <br></p><p>
 <B>Staple</B><a name="Staple"></a><BR>
