Beginninng the process of publishing Spring 2023 courses 	new file:   S23/304/304S23DN.HTM 	new file:   S23/363/363S23DN.HTM 	modified:   S23/363/363S23PS.HTM 	new file:   S23/363/EGR363-01Syllabus2023S_De_Boer_363S23SY_Intro_to_Communication_Systems.pdf 	modified:   S23/363S23.HTM 	modified:   integrity.htm

--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/02/2022 12:45 am)
+                              >(Last update: 12/27/2022 6:28 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -105,16 +105,18 @@ PS                                                       </small>
  2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        1/??<br>
+        1/13<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href=""
-		>1/??</a><br>
+        1/20
+		<!--<a href=""
+		>1/20</a>--><br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        <a href=
-        "https://dordt.instructure.com/files/183283448/download?download_frd=1"
-        >9/02</a><br><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>9/02<br>at<br>about<br>9:30<br>PM or<br>later.
+        &nbsp;
+		<!--<a href=
+        "https://dordt.instructure.com/files/. . ."
+        >9/02</a><br><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>9/02<br>at<br>about<br>9:30<br>PM or<br>later.-->
 		<!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Types of signals & systems             <br>&nbsp;
         Read: Ch 1 Sec. 1.4, Ch.2 through Sec. 2.1     <br>&nbsp;
@@ -157,10 +159,10 @@ PS                                                       </small>
  1
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        1/??
+        1/13
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/??
+        1/16
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         ---
