--- a/integrity.htm
+++ b/integrity.htm
@@ -18,20 +18,33 @@ TABLE {font-family:"verdana"; font-size:10pt;} -->
 <P Align="center"><B>
                    STANDARDS of SCHOLARSHIP</b><br>
             For Professor De Boer's Classes</b><br>
- <small><font color="grey">(Last updated on 11/03/2022)</font></small></p><p>
+ <small><font color="grey">(Last updated on 12/10/2022)</font></small></p><p>
  
  ". . .whatever you do, whether in word or deed, do it all in 
 the name of the Lord Jesus..." (from Colossians 3)</p><p> 
 
-<P><B>Homework is for Learning by Showing How<br>
+<P><B>Homework is for Learning by Showing How<br><br>
 </B><a name="Show_How"></a>
 
+SUMMARY<br>
+Good homework builds a relationship between you and God.<br>
+Some memorization is needed but "knowing the steps" is not the goal.<br>
+Skipped steps may reflect a lack of understanding.<br> 
+When answers are given, explanation is everything.<br>
+If asked to "explain," write an explanation!<br><br>
+
+DETAILS<br>
 The overall goal of doing homework is to build a relationship 
-of understanding between you and God's world.  When you can 
-show others how solve a problem, then you have really learned, 
-not mearely earned a grade.  On written homework you need to present a 
-clear sequence of rational statements to show how a problem 
-is solved, not simply a correct answer.  </p><p> 
+of understanding between you and God's creation, our world.  
+When you can show others how solve a problem or show others 
+how one thing relates to another thing, then you have really 
+learned something about God's creation.  In contrast, if you 
+have memorized steps that you need to perform to solve a problem 
+you have merely earned a grade.  Of course, you will earn grades, 
+and memorize some stuff, but the goal of homework is more 
+than memorization, it is learning.  On written homework you 
+need to present a clear sequence of rational statements to show 
+how a problem is solved, not simply a correct answer.  </p><p> 
 
 Skipped steps may be interpreted as a lack of understanding on 
 your part and may be graded down accordingly. </p><p> 
@@ -140,9 +153,9 @@ A good quality 0.5&nbsp;mm mechanical pencil (e.g. Pentel brand
 >Clic</a>") will pay for themselves many times over with time 
 saved when used generously.  This equipment is available at the 
 <a href=
-"http://www.dordt.edu/services_support/bookstore/">Dordt University 
+"https://bookstore.dordt.edu/">Dordt University 
 Campus Store</a> and at other local merchants such as  
-<a href="http://www.walmart.com/storeLocator/ca_storefinder_details_short.do?edit_object_id=1152"
+<a href="https://www.walmart.com/store/1152-sioux-center-ia"
 >Walmart</a>. </P><P> 
 
 <B>Page Heading</B><a name="Heading"></a><BR>
@@ -333,7 +346,7 @@ is required.</P><P>
 Avoiding plagiarism is one aspect of working with
 academic integrity, which is more generally discussed in the
 Student Handbook (<a href=
-"https://www.dordt.edu/student-life/student-handbook/general-information#Academic%20Integrity"
+"https://www.dordt.edu/student-life/residential-life/student-services/student-handbook#academic-integrity"
 >section on Academic Integrity</a>).</P><P>  
 
 Keep your papers and computer files private.  The 
