Link EGR 363 S23 public page to past course offerings, support EGR 363 F20 slides in S23 course 	modified:   F20/363F20.HTM 	new file:   S23/363/363F20DN_edited_for_S23.HTM 	modified:   S23/363S23.HTM

--- a/F20/363F20.HTM
+++ b/F20/363F20.HTM
@@ -123,9 +123,9 @@ The Canvas@dordt portal provides everything on this page and more.<br>
 
 <a href="../F19/363F19.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course <!-- 
-<a href="../S18/363S18.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"></a> --> 
+offering of this course  
+<a href="../S23/363S23.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"></a> 
 <BR>
 </small></P> 
 
