Publish the public web portal for EGR 304 S23 	modified:   S20/304S20.HTM 	new file:   S23/304/ARDUINO.GIF 	new file:   S23/304/DeBoer_2016_135x165.jpg 	new file:   S23/304S23.HTM

--- a/S23/304S23.HTM
+++ b/S23/304S23.HTM
@@ -30,7 +30,7 @@ TABLE {
              Dordt University Engineering Department                </A><BR>
                                                                      <BR>
          EMBEDDED MICROCONTROLLER SYSTEMS, EGR 304                   <BR>
-                       SPRING 2020                           </b><br>
+                       SPRING 2023                           </b><br>
                                                        </td></tr></table>
 <table align="center" width=480><tr>
 <!-- TEXTBOOK -->
@@ -39,7 +39,7 @@ TABLE {
    <img width="120" height="160"
            alt="Lee &amp; Seshia, <i>Intro to Embedded Systems" 
            hspace="0" 
-           src="../S20/304/Lee_Seshia_2e_thumbnail_120x160.png" 
+           src="../S23/304/Lee_Seshia_2e_thumbnail_120x160.png" 
            border="0">
    </A> 
    <a href="https://ptolemy.berkeley.edu/books/leeseshia/" target="_top">
@@ -51,7 +51,7 @@ TABLE {
    <A HREF="../index.html" target="_top">
       <img width="135" height="165" 
            alt="'click'-->to De Boer's homepage" hspace="0" 
-           src="../S20/304/DeBoer_2016_135x165.jpg" 
+           src="../S23/304/DeBoer_2016_135x165.jpg" 
            border="0" ><br>
    </A>
    <A HREF="../index.html" target="_top">
@@ -65,7 +65,7 @@ TABLE {
       target="_top">
       <img width="150" height="111" 
          alt="'click'-->to Arduino page" hspace="0" 
-         src="../S20/304/ARDUINO.GIF" 
+         src="../S23/304/ARDUINO.GIF" 
          border="0" ><br>
    </A>
    <A HREF="http://www.arduino.cc/" 
@@ -77,7 +77,7 @@ TABLE {
 <table align="center" width="480"><tr><td>
 
 <!-- HOMEWORK -->
-<P style="text-align: center;"><br><A HREF="../S20/304/304S20PS.HTM" target="_top" 
+<P style="text-align: center;"><br><A HREF="../S23/304/304S23PS.HTM" target="_top" 
    >Homework Assignments</A><BR><br>
    All course work must conform to these <A 
    HREF="../integrity.htm" target="_top"
@@ -85,11 +85,11 @@ TABLE {
 </P> 
 
 <!-- SYLLABUS -->
-<P style="text-align: center;"><A HREF= "../S20/304/EGR304_01Syllabus2020S_De_Boer_304S20SY.pdf" target="_top"
+<P style="text-align: center;"><A HREF= "../S23/304/EGR304_01Syllabus2023S_De_Boer_304S23SY.pdf" target="_top"
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
-<P style="text-align: center;"><A HREF = "./304/Slides/304S20DN_local.HTM" target="_top"
+<P style="text-align: center;"><A HREF = "./304/Slides/304S23DN_local.HTM" target="_top"
 >Slides and videos for each class period</A></P>
 <!-- DE BOER'S PAGE -->
 <P style="text-align: center;"><A HREF = "../index.html" target="_top"
@@ -105,17 +105,17 @@ Canvas@Dordt on the <br>World Wide Web via the <a href=
 
 <!-- FINE PRINT -->        <p style="text-align: center;"><small>
 The main portal for this course for students is via <a href=
-"https://dordt.instructure.com/courses/2662877" target="_top" 
+"https://dordt.instructure.com/courses/3642050" target="_top" 
 >Canvas@Dordt</a></br>
 The Canvas@Dordt portal provides everything in this frame and 
 more.</small><br><br>
 
 
-<a href="../S17/304S17.HTM">
+<a href="../S20/304S20.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
 offering of this course 
-<a href="../S23/304S23.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0">
+<!-- <a href="../S18/304S18.HTM"> 
+<img src="../NEXT.GIF" ALT="MEXT" border="0"> -->
 <BR> 
 
 </small></P> 
