Publishing EGR 304 slides and videos from a past semeseter 	new file:   S23/304/304S23DN.HTM 	new file:   S23/304/304S23DN_InfinityFree.HTM 	new file:   S23/304/304S23PS.HTM 	new file:   S23/304/EGR304-01Syllabus2023S_De_Boer_304S23SY_Embedded_Microcontroller_Systems.pdf 	modified:   S23/304S23.HTM 	modified:   S23/363/363S23DN.HTM 	new file:   S23/363/363S23DN_InfinityFree.HTM 	modified:   S23/363S23.HTM

--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 <link rel="shortcut icon" href="../../favicon.ico">
-<title>EGR 363, Daily Notes</title>
+<title>EGR 304, Daily Notes</title>
 <style type="text/css"><!--
 TABLE {
    font-family: "verdana";
@@ -65,7 +65,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
                    <A HREF="../../redirect/Dordt_Engineering.htm"
 
          >DORDT UNIVERSITY ENGINEERING DEPARTMENT        </A><BR><B>
-        EGR 363 &mdash; INTRODUCTION TO COMMUNICATION SYSTEMS  <BR>
+        EGR 304 &mdash; EMBEDDED MICROCONTROLLER SYSTEMS (With Lab)  <BR>
                            Spring 2023                     </B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
@@ -188,7 +188,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -205,7 +205,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=VjX6azStmMw">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -290,7 +290,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=WsLm9wu8Z3g">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/03 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -307,7 +307,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=MgguFFBkb8Q">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project I Report Due Wednesday, 4/05</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--></td>  
    </TR><!-- Week of 4/10 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
@@ -325,7 +325,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Easter Break (no class)</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #2.</font><!--end comment--></td>  
    </TR><!-- Week of 4/17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
@@ -342,7 +342,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Term Paper Due Friday, 4/21</font><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 4/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
@@ -358,7 +358,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=UwVEIvlqcWo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Project II Report Due Wednesday, 4/05</font><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 5/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
