--- a/S23/304S23.HTM
+++ b/S23/304S23.HTM
@@ -85,12 +85,14 @@ TABLE {
 </P> 
 
 <!-- SYLLABUS -->
-<P style="text-align: center;"><A HREF= "../S23/304/EGR304_01Syllabus2023S_De_Boer_304S23SY.pdf" target="_top"
+<P style="text-align: center;"><A HREF= "../S23/304/EGR304-01Syllabus2023S_De_Boer_304S23SY.pdf" target="_top"
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
-<P style="text-align: center;"><A HREF = "./304/Slides/304S23DN_local.HTM" target="_top"
+<!-- SLIDES AND VIDEOS -->
+<P style="text-align: center;"><A HREF = "./304/304S23DN_InfinityFree.HTM" target="_top"
 >Slides and videos for each class period</A></P>
+
 <!-- DE BOER'S PAGE -->
 <P style="text-align: center;"><A HREF = "../index.html" target="_top"
 >Professor De Boer's Homepage</A></P><br><br><small>
