--- a/S23/363S23.HTM
+++ b/S23/363S23.HTM
@@ -95,8 +95,12 @@ target="_top">
 <P style="text-align: center;"><A HREF= "363/EGR363-01Syllabus2023S_De_Boer_363S23SY_Intro_to_Communication_Systems.pdf" target="_top"
                      >Course Syllabus</A><BR>
   Includes course description, textbook, grade weights, etc.<br>
-       <!--(Course Syllabus will be available starting<br>
-                  Mon. January 15, 2007)--></P> 
+</P> 
+
+<!-- SLIDES AND VIDEOS -->
+<P style="text-align: center;"><A HREF = "./363/363S23DN_InfinityFree.HTM" target="_top"
+>Slides and videos for each class period</A></P>
+
 
 <P style="text-align: center;">
    <A HREF="../errata/Proakis_Salehi/2nd/P_S_2_ER.HTM"
