--- a/S23/363S23.HTM
+++ b/S23/363S23.HTM
@@ -98,7 +98,7 @@ target="_top">
 </P> 
 
 <!-- SLIDES AND VIDEOS -->
-<P style="text-align: center;"><A HREF = "./363/363S23DN_InfinityFree.HTM" target="_top"
+<P style="text-align: center;"><A HREF = "http://ddb.rf.gd/EGR363S23/SLIDES_F20/363F20DN_relative_URLs.HTM" target="_top"
 >Slides and videos for each class period</A></P>
 
 
