Fixed a broken link 	modified:   S23/304S23.HTM 	modified:   S23/363/363F20DN_edited_for_S23.HTM

--- a/S23/363/363F20DN_edited_for_S23.HTM
+++ b/S23/363/363F20DN_edited_for_S23.HTM
@@ -50,12 +50,16 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    background-color:#FFFFFF; 
    color:#CC9900;
    text-decoration: none;
-   text-align: center;
-   } -->
+   text-align: center;   
+   } 
+   
+body {
+   background-color: #FCF7E0;
+   }   -->
 </style>
 </head>
 
-<body>
+<body> 
 <TABLE align="center" 
        width="550"
        cellspacing="0"
@@ -66,7 +70,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 
          >DORDT COLLEGE ENGINEERING DEPARTMENT        </A><BR><B>
    EGR 363 &mdash; INTRODUCTION TO COMMUNICATION SYSTEMS     <BR>
-                           Fall 2020                     </B></P>
+ <span style="color: red; font-size: 20">Fall 2020</span></B></P>
 
                    <P style="text-align:center; margin-top: 10px; 
                                        margin-bottom: 0px;"><U><B
