Unpublished public links to slides.  Added crinkle featue to old pages. 	new file:   Canvas_common/pngfind.com-paper-png-1231724_export.png 	new file:   S23/304/304S20DN_edited_for_S23.HTM 	modified:   S23/304S23.HTM 	modified:   S23/363/363F20DN_edited_for_S23.HTM 	modified:   S23/363S23.HTM

--- a/S23/304S23.HTM
+++ b/S23/304S23.HTM
@@ -89,9 +89,9 @@ TABLE {
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
-<!-- SLIDES AND VIDEOS -->
+<!-- SLIDES AND VIDEOS ->
 <P style="text-align: center;"><A HREF = "./304/304S23DN_InfinityFree.HTM" target="_top"
->Slides and videos for each class period</A></P>
+>Slides and videos for each class period</A></P> <!-- -->
 
 <!-- DE BOER'S PAGE -->
 <P style="text-align: center;"><A HREF = "../index.html" target="_top"
