--- a/S23/363/363F20DN_edited_for_S23.HTM
+++ b/S23/363/363F20DN_edited_for_S23.HTM
@@ -55,6 +55,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    
 body {
    background-color: #FCF7E0;
+   background-image: url('https://dfdeboer.github.io/Canvas_common/pngfind.com-paper-png-1231724_export.png');
    }   -->
 </style>
 </head>
