--- a/S23/363S23.HTM
+++ b/S23/363S23.HTM
@@ -98,10 +98,9 @@ target="_top">
 </P> 
 
 <!-- SLIDES AND VIDEOS -->
-<!-- File servier is at URL http://ddb.rf.gd/EGR363S23/SLIDES_S23/ -->
-<!-- The link below goes to an index file to the files a the above URL. -->
-<P style="text-align: center;"><A HREF = "363/363S23DN_InfinityFree.HTM" target="_top"
->Slides and videos for each class period</A></P>
+<!-- The link below goes to an index file to the files a the above URL. --> <!-- ->
+<P style="text-align: center;"><A HREF = "---/363S23DN_InfinityFree.HTM" target="_top"
+>Slides and videos for each class period</A></P> <!-- -->
 
 
 <P style="text-align: center;">
