Publish visitor's guide 	new file:   Canvas_common/Online Meeting Virtual - Free vector graphic on Pixabay.URL 	new file:   Canvas_common/TypicalPublicPortal.png 	new file:   Canvas_common/online-meeting-g3a80c7921_640.png 	modified:   S23/363S23.HTM 	new file:   VG.HTM

--- a/S23/363S23.HTM
+++ b/S23/363S23.HTM
@@ -98,9 +98,14 @@ target="_top">
 </P> 
 
 <!-- SLIDES AND VIDEOS -->
-<!-- The link below goes to an index file to the files a the above URL. --> <!-- ->
-<P style="text-align: center;"><A HREF = "---/363S23DN_InfinityFree.HTM" target="_top"
->Slides and videos for each class period</A></P> <!-- -->
+
+<P style="text-align: center;">
+Zoom into the live classroom <a href="">here.</a><br>
+<small><i>(The above link only works when class is in progress.)</i></small><br> 
+<!-- The link below goes to an index file to the files a the above URL. --> <!-- -->
+<A HREF = "---/363S23DN_InfinityFree.HTM" target="_top"
+>Slides and videos for each class period</A><br>
+Please read Professor De Boer's <a href="../VG.HTM">Visitor's Guide</a></P> <!-- -->
 
 
 <P style="text-align: center;">
