--- a/S23/304S23.HTM
+++ b/S23/304S23.HTM
@@ -89,9 +89,15 @@ TABLE {
                      >Course Syllabus</A><BR>
 Includes course description, textbook, grade weights, etc. <br></P> 
 
-<!-- SLIDES AND VIDEOS ->
-<P style="text-align: center;"><A HREF = "./304/304S23DN_InfinityFree.HTM" target="_top"
->Slides and videos for each class period</A></P> <!-- -->
+<!-- SLIDES AND VIDEOS -->
+<P style="text-align: center;">
+Zoom into the live classroom <a href="">here.</a><br>
+<small><i>(The above link only works when class is in progress.)</i></small><br> 
+<!-- The link below goes to an index file to the files a the above URL. --> <!-- -->
+<A HREF = "304/304S23DN_InfinityFree.HTM" target="_top"
+>Slides and videos for each class period</A><br>
+Please read Professor De Boer's <a href="../VG.HTM">Visitor's Guide</a></P>
+<!-- -->
 
 <!-- DE BOER'S PAGE -->
 <P style="text-align: center;"><A HREF = "../index.html" target="_top"
