--- a/S23/363/363S23DN_InfinityFree.HTM
+++ b/S23/363/363S23DN_InfinityFree.HTM
@@ -256,8 +256,8 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Xi3yVnm9rTQ">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, Spring Break.</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
@@ -272,7 +272,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=lhPnguezxr0">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
