Published Zoom links to class, updated bookmarks. 	modified:   S23/304S23.HTM 	modified:   S23/363S23.HTM 	modified:   bookmarks.html

--- a/S23/363S23.HTM
+++ b/S23/363S23.HTM
@@ -100,7 +100,9 @@ target="_top">
 <!-- SLIDES AND VIDEOS -->
 
 <P style="text-align: center;">
-Zoom into the live classroom <a href="">here.</a><br>
+Zoom into the live classroom <a 
+href="https://dordt-edu.zoom.us/j/98472928547?pwd=bWVOYTcwUEUwWTN0d1JNMWVsYmRVQT09"
+>here.</a><br>
 <small><i>(The above link only works when class is in progress.)</i></small><br> 
 <!-- The link below goes to an index file to the files a the above URL. --> <!-- -->
 <A HREF = "363/363S23DN_InfinityFree.HTM" target="_top"
