--- a/S23/304S23.HTM
+++ b/S23/304S23.HTM
@@ -91,7 +91,9 @@ Includes course description, textbook, grade weights, etc. <br></P>
 
 <!-- SLIDES AND VIDEOS -->
 <P style="text-align: center;">
-Zoom into the live classroom <a href="">here.</a><br>
+Zoom into the live classroom <a 
+href="https://dordt-edu.zoom.us/j/98687429572?pwd=cERqWjFqZzJOTWY3dTNnYS94MStqdz09"
+>here.</a><br>
 <small><i>(The above link only works when class is in progress.)</i></small><br> 
 <!-- The link below goes to an index file to the files a the above URL. --> <!-- -->
 <A HREF = "304/304S23DN_InfinityFree.HTM" target="_top"
